k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localk8s-deployment
  namespace: localk8s
  labels:
    app: localk8s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: localk8s
  template:
    metadata:
      labels:
        app: localk8s
    spec:
      containers:
      - name: localk8s
        # Add the image here(including version tag)
        image: localk8s:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8002
